# model-signing-conformance

./: README.md  TEST_CASES.md  action.py  action.yml  pyproject.toml  requirements.txt  selftest-client
.github/scripts/: check_regression.py  generate_benchmark_report.py  generate_report.py  validate_scenarios.py
.github/workflows/: ci.yml  collect-benchmarks.yml  publish-report.yml  validate-scenarios.yml
benchmark-action/: action.yml
benchmarks/: README.md
benchmarks/harness/: adapter.py  generate.py  run.py
benchmarks/scenarios/: chunk_size_sweep.yaml  hash_algorithm_sweep.yaml  shard_size_sweep.yaml  sign_throughput.yaml  verify_throughput.yaml  worker_count_sweep.yaml
benchmarks/scenarios/certificate/: sign_throughput.yaml  verify_throughput.yaml
benchmarks/scenarios/hash/: chunk_size_sweep.yaml  hash_algorithm_sweep.yaml  hash_throughput.yaml  shard_size_sweep.yaml  worker_count_sweep.yaml
benchmarks/scenarios/key/: sign_throughput.yaml  verify_throughput.yaml
benchmarks/schema/: result.schema.json  scenario.schema.json
docs/: conformance_adapter_cli_protocol.md
test/: client.py  conftest.py  schema_validator.py  test_roundtrip.py  test_verify.py
test/assets/keys/expired/: signing-key-cert.pem  signing-key.pem
test/assets/keys/p384/: signing-key-pub.pem  signing-key.pem
test/assets/keys/p521/: signing-key-pub.pem  signing-key.pem
test/assets/keys/self-signed/: signing-cert.pem  signing-key-pub.pem  signing-key.pem
test/assets/keys/wrong/: wrong-ca-cert.pem  wrong-key-pub.pem  wrong-key.pem
tools/: generate-verify-assets.sh
(+165 files in other folders)
