[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "model-signing-conformance"
version = "0.1.0"
description = "Conformance test suite for OpenSSF Model Signing (OMS)"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.0",
    "pytest-json-report>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
line-length = 100
