[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "model-signing-conformance"
version = "0.1.0"
description = "Conformance test suite for OpenSSF Model Signing (OMS)"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.0",
    "pytest-json-report>=1.5.0",
    "jsonschema>=4.20",
    "referencing>=0.31",
    "oms-schemas @ git+https://github.com/sampras343/model-signing-spec.git@main",
]

[project.optional-dependencies]
benchmark = [
    "pyyaml>=6.0",
    "psutil>=5.9",
    "py-cpuinfo>=9.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
line-length = 100
